--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-19
 android.library=true
-android.library.reference.1=../workspace/appcompat_v7_2
+android.library.reference.1=../../workspace/appcompat_v7_2
